feat: added backoffice routes
