# src/controllers/cliente.go
@@ -43,7 +43,7 @@ func (c *ClienteController) Ping(w http.ResponseWriter, r *http.Request) {
 // @Tags		Clients
 // @ID			get-all-clients
 // @Produce	json
-// @Success	200	{object}	clienteAdapter.Cliente
+// @Success	200	{object}	cliente.Cliente
 // @Param       cpf  query       string  false   "Optional Filter by CPF"
 // @Failure	500
 // @Router		/clientes [get]
@@ -75,7 +75,7 @@ func (c *ClienteController) GetAll() http.HandlerFunc {
 // @ID			get-client-by-id
 // @Produce	json
 // @Param		id	path		string	true	"Client ID"
-// @Success	200	{object}	clienteAdapter.Cliente
+// @Success	200	{object}	cliente.Cliente
 // @Failure	404
 // @Router		/clientes/{id} [get]
 func (c *ClienteController) GetByID() http.HandlerFunc {
@@ -104,8 +104,8 @@ func (c *ClienteController) GetByID() http.HandlerFunc {
 //
 // @ID			create-client
 // @Produce	json
-// @Param		data	body		clienteAdapter.Cliente	true	"Client data"
-// @Success	200		{object}	clienteAdapter.Cliente
+// @Param		data	body		cliente.Cliente	true	"Client data"
+// @Success	200		{object}	cliente.Cliente
 // @Failure	400
 // @Router		/clientes [post]
 func (c *ClienteController) Create() http.HandlerFunc {
@@ -138,8 +138,8 @@ func (c *ClienteController) Create() http.HandlerFunc {
 // @ID			update-client
 // @Produce	json
 // @Param		id		path		string	true	"Client ID"
-// @Param		data	body		clienteAdapter.Cliente	true	"Client data"
-// @Success	200		{object}	clienteAdapter.Cliente
+// @Param		data	body		cliente.Cliente	true	"Client data"
+// @Success	200		{object}	cliente.Cliente
 // @Failure	404
 // @Failure	400
 // @Router		/clientes/{id} [put]
